# yap

./: .gitignore  CHANGELOG.md  README.md  cookiecutter.json  copier.yml
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{project_slug}}/: .env.template  README.md  pyproject.toml  pyproject.toml.template  pyproject.toml.tmplt
{{project_slug}}/app/core/: settings.py
